--- a/themes/sundown.yaml
+++ b/themes/sundown.yaml
@@ -18,7 +18,7 @@ sundown:
   label-badge-border-color: "green" # Label badge border, just a reference value
 
   # Background colors
-  primary-background-color: "#35274a" # Settings background
+  primary-background-color: "#2c203e" # Settings background
   secondary-background-color: "#383C45" # Main card UI background
   divider-color: "rgba(0, 0, 0, .12)" # Divider
   data-table-background-color: "#433557"
